--- a/TelecomX_parte2.ipynb
+++ b/TelecomX_parte2.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyPSaCbKEUQBrF11ir+EMEoW",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,25 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/SilvanaCicchitti/TelecomX-parte2/blob/main/TelecomX_parte2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Challenge Telecom X - Parte 2"
+      ],
+      "metadata": {
+        "id": "b5TwR_sWnO7f"
+      }
+    },
     {
       "cell_type": "code",
       "execution_count": null,
