Oversampling/ árbol/ random forest

--- a/TelecomX_parte2.ipynb
+++ b/TelecomX_parte2.ipynb
@@ -1496,9 +1496,237 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "y_train.value_counts()"
+      ],
+      "metadata": {
+        "id": "AuYy6Sm6KJ-F",
+        "outputId": "795b9274-6cac-4a76-926b-cd5957489924",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 178
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Churn\n",
+              "0    3903\n",
+              "1    1371\n",
+              "Name: count, dtype: int64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>count</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Churn</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>3903</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1371</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> int64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#oversampling\n",
+        "from imblearn.over_sampling import SMOTE\n",
+        "smote = SMOTE(random_state=7)\n",
+        "X_train_over, y_train_over = smote.fit_resample(X_train, y_train)\n"
+      ],
       "metadata": {
         "id": "-EA8LeVkIlVF"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_train_over.value_counts()"
+      ],
+      "metadata": {
+        "id": "Z2XE72KtK6GW",
+        "outputId": "b27c1553-ccb1-4266-b5bd-7f30021a8d01",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 178
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Churn\n",
+              "0    3903\n",
+              "1    3903\n",
+              "Name: count, dtype: int64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>count</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Churn</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>3903</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>3903</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> int64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.ensemble import RandomForestClassifier"
+      ],
+      "metadata": {
+        "id": "O853NImLK9Le"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arbol = DecisionTreeClassifier(max_depth = 4)\n",
+        "random_forest = RandomForestClassifier(max_depth = 3)"
+      ],
+      "metadata": {
+        "id": "hGs1VMt3NTDO"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arbol.fit(X_train_over, y_train_over)\n",
+        "print(f'Exactitud del modelo con el conjunto de entrenamiento es: {arbol.score(X_train_over, y_train_over)}')\n",
+        "print(f'Exactitud del modelo con el conjunto de prueba es: {arbol.score(X_test, y_test)}')"
+      ],
+      "metadata": {
+        "id": "aFT_mK4MNnrW",
+        "outputId": "3bc58989-6eb2-4b91-8b3f-5f7da10e1fe8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Exactitud del modelo con el conjunto de entrenamiento es: 0.8032282859338971\n",
+            "Exactitud del modelo con el conjunto de prueba es: 0.7201365187713311\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "random_forest.fit(X_train_over, y_train_over)\n",
+        "print(f'Exactitud del modelo con el conjunto de entrenamiento es: {random_forest.score(X_train_over, y_train_over)}')\n",
+        "print(f'Exactitud del modelo con el conjunto de validación es: {random_forest.score(X_test, y_test)}')"
+      ],
+      "metadata": {
+        "id": "iIuASAYoOELO",
+        "outputId": "f00aa978-2035-41ce-edf5-6b528c98d092",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Exactitud del modelo con el conjunto de entrenamiento es: 0.7922111196515501\n",
+            "Exactitud del modelo con el conjunto de validación es: 0.7485779294653014\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "dElmZtlsOYj-"
       },
       "execution_count": null,
       "outputs": []
