--- a/TelecomX_version2.ipynb
+++ b/TelecomX_version2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOzepkUi6fFhGRfwYFR8jcn",
+      "authorship_tag": "ABX9TyN6jfB3fhr66LbKA8ITYTzn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 302,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -711,7 +711,7 @@
         "id": "oNLWCxXHfEBn",
         "outputId": "bb6a066b-25cd-4fa7-d57d-77b05a8737b3"
       },
-      "execution_count": 303,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -762,7 +762,7 @@
         "id": "TkbHitIpfF9n",
         "outputId": "01f8b79d-b930-4975-fa4d-be1bab9e5fb4"
       },
-      "execution_count": 304,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -791,7 +791,7 @@
       "metadata": {
         "id": "3HdfvqhCe4Yo"
       },
-      "execution_count": 305,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -806,7 +806,7 @@
         "id": "_1ivvXVNfXYf",
         "outputId": "1198535c-de58-4902-99cd-f0b6eb4b3562"
       },
-      "execution_count": 306,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -853,7 +853,7 @@
       "metadata": {
         "id": "MRUn04hafksw"
       },
-      "execution_count": 307,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -870,7 +870,7 @@
         "id": "Tjxmvt39g3If",
         "outputId": "71e7b628-cf9a-4f81-eb37-53d49e7ad2fd"
       },
-      "execution_count": 308,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -913,7 +913,7 @@
         "id": "YNHsnK3wg0EA",
         "outputId": "a15f52b2-279c-4ce8-a9b7-5a885c59aec4"
       },
-      "execution_count": 309,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1599,7 +1599,7 @@
         "id": "3qkQPXFOhop4",
         "outputId": "98a59ae9-9c17-46cd-fb2d-d150d41e36b4"
       },
-      "execution_count": 310,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1656,7 +1656,7 @@
         "id": "QGM3A8syiSwQ",
         "outputId": "11df6b7a-64fb-427a-a8d0-1d14e967ec37"
       },
-      "execution_count": 311,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1844,7 +1844,7 @@
       "metadata": {
         "id": "n6irjpCjig9g"
       },
-      "execution_count": 312,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1861,7 +1861,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 313,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1892,7 +1892,7 @@
           "height": 273
         }
       },
-      "execution_count": 314,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2343,7 +2343,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 315,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2383,7 +2383,7 @@
       "metadata": {
         "id": "wHaxyJ5Qj1OJ"
       },
-      "execution_count": 316,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2406,7 +2406,7 @@
           "height": 587
         }
       },
-      "execution_count": 317,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2439,7 +2439,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 318,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2502,7 +2502,7 @@
           "height": 595
         }
       },
-      "execution_count": 319,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2534,7 +2534,7 @@
       "metadata": {
         "id": "QErJh76up3Yx"
       },
-      "execution_count": 320,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2547,7 +2547,7 @@
       "metadata": {
         "id": "BBrhW33ssHcC"
       },
-      "execution_count": 321,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2559,7 +2559,7 @@
       "metadata": {
         "id": "ZZVxK58QsT1C"
       },
-      "execution_count": 322,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2584,7 +2584,7 @@
           "height": 957
         }
       },
-      "execution_count": 323,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3030,7 +3030,7 @@
           "height": 739
         }
       },
-      "execution_count": 324,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3440,7 +3440,7 @@
       "metadata": {
         "id": "iYywcrAMt3cK"
       },
-      "execution_count": 325,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3454,7 +3454,7 @@
       "metadata": {
         "id": "c97MdumLwS9b"
       },
-      "execution_count": 326,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3466,7 +3466,7 @@
       "metadata": {
         "id": "Mij8EjeSwbei"
       },
-      "execution_count": 327,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3480,7 +3480,7 @@
       "metadata": {
         "id": "f24WgQ0Ywyvr"
       },
-      "execution_count": 328,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3493,7 +3493,7 @@
       "metadata": {
         "id": "6rQKW9PNw9HD"
       },
-      "execution_count": 329,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3530,7 +3530,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 330,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3581,7 +3581,7 @@
           "height": 488
         }
       },
-      "execution_count": 331,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3614,7 +3614,7 @@
           "height": 473
         }
       },
-      "execution_count": 332,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3662,7 +3662,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 333,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3705,7 +3705,7 @@
           "height": 472
         }
       },
-      "execution_count": 334,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3774,7 +3774,7 @@
           "height": 532
         }
       },
-      "execution_count": 335,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3819,7 +3819,7 @@
           "height": 707
         }
       },
-      "execution_count": 336,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4294,7 +4294,7 @@
           "height": 519
         }
       },
-      "execution_count": 337,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4726,7 +4726,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 338,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4764,7 +4764,7 @@
       "metadata": {
         "id": "N9AUOaSwKu_x"
       },
-      "execution_count": 339,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4777,7 +4777,7 @@
       "metadata": {
         "id": "vBUEdh1oPOpY"
       },
-      "execution_count": 340,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4791,7 +4791,7 @@
       "metadata": {
         "id": "kK7Z7nKvQ5Jp"
       },
-      "execution_count": 341,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4804,7 +4804,7 @@
       "metadata": {
         "id": "wZ4SeD-RQ9wZ"
       },
-      "execution_count": 342,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4820,12 +4820,12 @@
       "cell_type": "code",
       "source": [
         "# Instanciar y entrenar\n",
-        "lr = LogisticRegression(random_state=42)\n",
-        "lr.fit(X_train_balanced, y_train_balanced)\n",
+        "lr_15 = LogisticRegression(random_state=42)\n",
+        "lr_15.fit(X_train_balanced, y_train_balanced)\n",
         "\n",
         "# Predicciones\n",
-        "y_pred_lr = lr.predict(X_test_scaled)\n",
-        "y_prob_lr = lr.predict_proba(X_test_scaled)[:, 1]\n",
+        "y_pred_lr = lr_15.predict(X_test_scaled)\n",
+        "y_prob_lr = lr_15.predict_proba(X_test_scaled)[:, 1]\n",
         "\n",
         "# Evaluación\n",
         "print(\"Regresión Lineal\")\n",
@@ -4836,18 +4836,18 @@
       ],
       "metadata": {
         "id": "n56Dtb5hOKYR",
-        "outputId": "46b850f5-5a58-4e52-d225-414fd6494b83",
+        "outputId": "efd105b2-63e2-4962-fc46-26ec074d7f27",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 343,
+      "execution_count": 353,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Regresión Logística\n",
+            "Regresión Lineal\n",
             "Exactitud: 0.7483412322274882\n",
             "ROC AUC: 0.8439278287757382\n",
             "Matriz de Confusión:\n",
@@ -4878,13 +4878,13 @@
       ],
       "metadata": {
         "id": "6naiSZdKQdXZ",
-        "outputId": "c547f97e-96e5-459a-873a-70fff2c5b706",
+        "outputId": "a7999fb5-5992-4c4c-8ee7-bef3c7778bf2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 473
         }
       },
-      "execution_count": 347,
+      "execution_count": 354,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4914,12 +4914,12 @@
       "cell_type": "code",
       "source": [
         "# Instanciar y entrenar\n",
-        "rf = RandomForestClassifier(random_state=42)\n",
-        "rf.fit(X_train_balanced, y_train_balanced)\n",
+        "rf_15 = RandomForestClassifier(random_state=42)\n",
+        "rf_15.fit(X_train_balanced, y_train_balanced)\n",
         "\n",
         "# Predicciones\n",
-        "y_pred_rf = rf.predict(X_test_scaled)\n",
-        "y_prob_rf = rf.predict_proba(X_test_scaled)[:, 1]\n",
+        "y_pred_rf = rf_15.predict(X_test_scaled)\n",
+        "y_prob_rf = rf_15.predict_proba(X_test_scaled)[:, 1]\n",
         "\n",
         "# Evaluación\n",
         "print(\"Random Forest\")\n",
@@ -4930,12 +4930,12 @@
       ],
       "metadata": {
         "id": "0WA35CAoRFlh",
-        "outputId": "0bf0f8bd-8474-45b2-aa45-d11dc0b23176",
+        "outputId": "c73a6b9d-504e-49f5-effa-85d07a737b8d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 345,
+      "execution_count": 351,
       "outputs": [
         {
           "output_type": "stream",
@@ -4972,13 +4972,13 @@
       ],
       "metadata": {
         "id": "Fp9AjBNVRVz5",
-        "outputId": "1f1843e4-7ff2-4c1c-87ac-0e1b0fc52d8e",
+        "outputId": "4316416a-36a3-4981-c4ea-1ddf722b8096",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 473
         }
       },
-      "execution_count": 348,
+      "execution_count": 352,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4993,12 +4993,82 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Modelo champion\n"
+      ],
+      "metadata": {
+        "id": "UypWNwILe_0R"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#serializando el modelo\n",
+        "import pickle\n",
+        "\n",
+        "try:\n",
+        "  with open('champion.pkl', 'wb') as archivo:\n",
+        "      pickle.dump(lr_15, archivo)\n",
+        "\n",
+        "  print(\"Modelo guardado exitosamente\")\n",
+        "except Exception as e:\n",
+        "  print(f\"Error al guardar el modelo: {e}\")"
+      ],
+      "metadata": {
+        "id": "3o-ceNEJfyup",
+        "outputId": "c082de59-450a-4748-bacd-12e752142b05",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 356,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Modelo guardado exitosamente\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Conclusión"
+      ],
+      "metadata": {
+        "id": "GCfNIbNsiu_w"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "El modelo seleccionado como Champion es la Regresión Logística con las 15 variables más relevantes.\n",
+        "Esta decisión se justifica porque:\n",
+        "\n",
+        "Alto recall en la clase Churn (≈0.79): permite detectar de manera temprana la mayoría de los clientes que efectivamente cancelan, lo cual es el objetivo principal del negocio.\n",
+        "\n",
+        "Rendimiento equivalente al modelo completo: mantiene la misma exactitud y ROC AUC que la versión con todas las variables, pero con menor complejidad.\n",
+        "\n",
+        "Interpretabilidad: al reducir el set de variables a las más influyentes, se facilita la explicación de los resultados y la identificación de los factores críticos en la cancelación.\n",
+        "\n",
+        "Eficiencia: menor número de variables significa modelos más ligeros, rápidos y menos propensos al sobreajuste.\n",
+        "\n",
+        "👉 En conclusión, la Regresión Logística (Top 15) combina eficacia predictiva y simplicidad interpretativa, ofreciendo la mejor alternativa para anticipar cancelaciones y orientar estrategias de retención en Telecom X."
+      ],
+      "metadata": {
+        "id": "3DqU23kzizoA"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "SNcN6C4uRbUZ"
+        "id": "1O-b4x6-im_B"
       },
-      "execution_count": 346,
+      "execution_count": null,
       "outputs": []
     }
   ]
